# chaos-and-recovery-agent

./: .gitignore  README.md  docker-compose.yml
agents/healer-agent/: README.md  pyproject.toml
agents/healer-agent/docs/: design_doc.md
agents/healer-agent/src/: ast_analyzer.py  docker_client.py  llm_client.py  logger.py  loki_client.py  main.py  models.py  sandbox.py
agents/healer-agent/tests/: test_ast_analyzer.py  test_docker_client.py  test_llm_client.py  test_loki_client.py  test_sandbox.py
docs/: functional_design_document.md
infra/monitoring/: grafana-datasources.yml  promtail-config.yml  telegraf.conf
services/: docker-compose.yml
services/inventory-api/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/inventory-api/docs/: design_doc.md
services/inventory-api/src/: data.py  main.py
services/inventory-api/tests/: test_main.py
services/store-frontend/: .dockerignore  .env.example  Dockerfile  README.md  jest.config.ts  next.config.ts  package-lock.json  package.json
services/store-frontend/__tests__/: HealthRoute.test.ts  InventoryTable.test.tsx  StatusBadge.test.tsx
services/store-frontend/docs/: design_doc.md
services/store-frontend/src/app/: error.tsx  page.tsx
services/store-frontend/src/app/api/health/: route.ts
services/store-frontend/src/components/ui/: InventoryTable.tsx  StatusBadge.tsx
services/store-frontend/src/lib/: logger.ts
