[project]
name = "healer-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "httpx>=0.28.1",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.7",
]
