[project]
name = "inventory-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]

[tool.ruff]
line-length = 88
# Updated to match your requires-python = ">=3.12"
target-version = "py312" 

[tool.pytest.ini_options]
pythonpath = [
  "."
]
testpaths = [
  "tests"
]